// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swagger integration: pathPatterns > OpenSpec3 > should swagger spec (admin) 1`] = `
{
  "components": {
    "schemas": {
      "Calendar": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": {
    "/rest/admin/all": {
      "get": {
        "operationId": "adminCtrlGet",
        "parameters": [],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "AdminCtrl",
        ],
      },
    },
    "/rest/admin/{id}": {
      "post": {
        "operationId": "adminCtrlPost",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "AdminCtrl",
        ],
      },
    },
    "/rest/orgs/calendars": {
      "get": {
        "operationId": "calendarsControllerGetAll",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/Calendar",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/orgs/calendars/csv": {
      "post": {
        "operationId": "calendarsControllerCsv",
        "parameters": [],
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/orgs/calendars/{id}": {
      "get": {
        "operationId": "calendarsControllerGet",
        "parameters": [
          {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "example": "5ce7ad3028890bd71749d477",
              "pattern": "^[0-9a-fA-F]{24}$",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Calendar",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "CalendarsController",
    },
    {
      "name": "AdminCtrl",
    },
  ],
}
`;

exports[`Swagger integration: pathPatterns > OpenSpec3 > should swagger spec (orgs) 1`] = `
{
  "components": {
    "schemas": {
      "Calendar": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": {
    "/rest/orgs/calendars": {
      "get": {
        "operationId": "calendarsControllerGetAll",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/Calendar",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/orgs/calendars/csv": {
      "post": {
        "operationId": "calendarsControllerCsv",
        "parameters": [],
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/orgs/calendars/{id}": {
      "get": {
        "operationId": "calendarsControllerGet",
        "parameters": [
          {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "example": "5ce7ad3028890bd71749d477",
              "pattern": "^[0-9a-fA-F]{24}$",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Calendar",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "CalendarsController",
    },
  ],
}
`;
